2013-06-08  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #48945: System wide detection does not work on Debian (thanks to Christian Weiske)
	* [TASK] #48958: Documentation template for new project should match TYPO3 documentation

2013-06-04  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 0.5.0
	* [TASK][DOC] Chapter describing the built-in ReStructuredText editor

2013-06-03  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use TYPO3 theme when compiling as HTML
	* [TASK][DOC] OpenOffice manual is obsolete
	* [BUGFIX] No syntax highlighting in documentation

2013-06-02  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Use admonitions for better rendering (http://docutils.sourceforge.net/docs/ref/rst/directives.html#admonitions)
	* [BUGFIX] #48773: Cannot render own manual as PDF
	* [BUGFIX] #48772: Cannot browse documentation offline
	* [TASK] #48771: Render property tables as on docs.typo3.org
	* [TASK] #48768: Makefile should use local Sphinx

2013-06-01  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Render link "Up" with interactive layout
	* [TASK] Soft wrap + margin in editor
	* [TASK] Visually simulate TYPO3 docheader
	* [FEATURE] Add PDF "layout" if pdflatex is available
	* [TASK] Keep track of preferences and current chapter
	* [BUGFIX] Direct links to _downloads/ are broken
	* [BUGFIX] Remove doctype warnings in frames

2013-05-31  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Cannot open image sources
	* [TASK] Rework of master TOC with recent changes in EXT:restdoc
	* [TASK] Add security checks (relates: #48597)
	* [WIP] #48597: Integrate a ReST editor
	* [TASK][DOC] Add a few indices
	* [TASK] Add support for general index

2013-05-30  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Render master TOC with interactive layout
	* [TASK] Detect outdated EXT:restdoc
	* [FEATURE] Basic use of EXT:restdoc to render documentation using JSON output

2013-05-29  Xavier Perseguers  <xavier@causal.ch>
